--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div class="socials">
 <div class="instagram"><a href="#"> <i class="fa-brands fa-instagram fa-2xl"></i> instagram</a> </div>
 <div class="twitter"> <a href="#"> <i class="fa-brands fa-square-x-twitter fa-2xl"></i> twitter</a> </div>
-<div class="github"><a href="#"> <i class="fa-brands fa-github fa-2xl"></i></i>github</a> </div>
+<div class="github"><a href="https://"> <i class="fa-brands fa-github fa-2xl"></i></i>github</a> </div>
     
 
 
