i added the links to my social media accounts

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 <div class="footer_ending">
 
 <div class="socials">
-<div class="instagram"><a href="#"> <i class="fa-brands fa-instagram fa-2xl"></i> instagram</a> </div>
-<div class="twitter"> <a href="#"> <i class="fa-brands fa-square-x-twitter fa-2xl"></i> twitter</a> </div>
-<div class="github"><a href="https://"> <i class="fa-brands fa-github fa-2xl"></i></i>github</a> </div>
+<div class="instagram"><a href="https://t.co/GBYuzKvfhQ"> <i class="fa-brands fa-instagram fa-2xl"></i> instagram</a> </div>
+<div class="twitter"> <a href="https://twitter.com/TolulopeOdufal1"> <i class="fa-brands fa-square-x-twitter fa-2xl"></i> twitter</a> </div>
+<div class="github"><a href="https://blackskeng007.github.io/portfolio/"> <i class="fa-brands fa-github fa-2xl"></i></i>github</a> </div>
     
 
 
